2008-08-05  Neil Roberts  <neil@o-hand.com>

	* examples/thumbnailer.rb: Store the main application in a
	variable so that it will be safe from the garbage collector

2008-08-04  Neil Roberts  <neil@o-hand.com>

	* examples/thumbnailer.rb (Thumbnailer::on_completed): While
	removing the thumbnails, keep the old behaviours in an array so
	that they won't be garbage collected while animating.

2008-08-02  Neil Roberts  <neil@o-hand.com>

	* examples/bubbles.rb: Ported the 'bubbles' example from the
	Python bindings

2008-08-02  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttimeline.c: Add missing wrappers for get_delta

2008-08-01  Neil Roberts  <neil@o-hand.com>

	* examples/clutter-gtk-events.rb: 
	* clutter-gtk/rbcluttergtkembed.c: 
	* clutter-gtk/rbcluttergtk.c: 
	* clutter-gtk/extconf.rb: 
	* clutter-gtk/clutter_gtk.rb: Upgrade to 0.8 API

	* .gitignore: Add clutter-gtk files

2008-08-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.h: 
	* clutter/rbclutter.c: 
	* clutter/rbcltmain.c: Move the rbclt_init function into
	rbclutter.c and make it take a function pointer for the init
	function to call so that it can be used by clutter-gst as well.

	* clutter-gst/rbcluttergst.c: 
	* clutter-gst/rbcltgstvideotexture.c: 
	* clutter-cairo/rbcluttercairo.c: Use the initialize_unowned and
	call_init functions from the clutter bindings instead of defining
	them again.

	* clutter-gst/extconf.rb: 
	* clutter-cairo/extconf.rb: Install the .rb wrapper and depend on
	clutter so we can call functions in that library

	* clutter-gst/clutter_gst.rb: 
	* clutter-cairo/clutter_cairo.rb: Wrappers to force loading
	clutter.so before the main module

	* .gitignore: Add clutter-gst files

2008-08-01  Neil Roberts  <neil@o-hand.com>

	* clutter-gst/rbcltgstaudio.c: Add a 'playbin' method

	* clutter-gst/extconf.rb: Require clutter-0.8 and clutter-gst-0.8

	* examples/video-player.rb: Update to 0.8 API

2008-08-01  Neil Roberts  <neil@o-hand.com>
